# temp_fhe_64b_mul_benchmarks

./: .gitignore  Makefile  README.md
cleartext_impl/src/include/: mul_cleartext.h
cleartext_impl/src/lib/: mul_cleartext.c
cleartext_impl/tests/: full_64b_mul_cleartext_1.c  half_64b_mul_cleartext_1.c
harness/: cleartext_impl.py  generate_dataset.py  params.py  run_submission.py  utils.py
implementation_0_tfhe_rs/: Cargo.toml
implementation_0_tfhe_rs/src/: he_mul.rs  lib.rs  main.rs  utils.rs
scripts/: build_task_implementation_0_tfhe_rs.sh
tests/: full_64b_mul_plaintext_1.c  half_64b_mul_plaintext_1.c
