[package]
name = "implementation_0_tfhe_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "~1.1.3", features = ["integer"] }
rand = { version = "0.9.1" }

[[bin]]
name = "half_cipher_cipher_64"

[[bin]]
name = "half_cipher_plaintext_64"

[[bin]]
name = "full_cipher_cipher_64"

[[bin]]
name = "full_cipher_plaintext_64"
